--- a/index.html
+++ b/index.html
@@ -12,16 +12,49 @@
         rel="stylesheet">
 
     <link rel="stylesheet" href="modern-normalize.css">
+    <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="header.css">
-    <link rel="stylesheet" href="main.css">
-    <link rel="stylesheet" href="footer.css">
+
+    <link rel="stylesheet" href="css/how-we-work.css">
 
     <title>Team Project</title>
 </head>
 
 <body>
+    <section class="how-we-work">
+        <div class="how-we-work__container container">
+            <div class="how-we-work__title">
+                <h1>How we
+                    work</h1>
+            </div>
 
+            <div class="how-we-work__description">
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                    industry's standard dummy text ever since the</p>
+            </div>
+
+            <ul class="how-we-work__list">
+                <li class="list__item">
+                    <img src="img/s_how-we-work/work_1.png" alt="work1">
+                </li>
+                <li class="list__item">
+                    <img src="img/s_how-we-work/work_2.png" alt="work2">
+                </li>
+                <li class="list__item">
+                    <img src="img/s_how-we-work/work_3.png" alt="work3">
+                </li>
+                <li class="list__item">
+                    <img src="img/s_how-we-work/work_4.png" alt="work4">
+                </li>
+            </ul>
+
+            <button class="how-we-work__button">
+                <p>Contact us</p>
+            </button>
+        </div>
+    </section>
 </body>
 
 </html>
