styles for "How we work" section

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         rel="stylesheet">
 
     <link rel="stylesheet" href="modern-normalize.css">
-    <link rel="stylesheet" href="css/header.css">
+    <!-- <link rel="stylesheet" href="css/header.css"> -->
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="styles.css">
@@ -24,15 +24,16 @@
 
 <body>
     <section class="how-we-work">
-        <div class="how-we-work__container container">
-            <div class="how-we-work__title">
-                <h1>How we
-                    work</h1>
-            </div>
+        <div class="how-we-work__background"></div>
+        <div class="how-we-work__container">
+            <div class="how-we-work__text">
+                <div class="how-we-work__description">
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the</p>
+                </div>
 
-            <div class="how-we-work__description">
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                    industry's standard dummy text ever since the</p>
+                <div class="how-we-work__title">
+                    <h1>How we work</h1>
+                </div>
             </div>
 
             <ul class="how-we-work__list">
@@ -50,7 +51,7 @@
                 </li>
             </ul>
 
-            <button class="how-we-work__button">
+            <button class="how-we-work__button" type="button">
                 <p>Contact us</p>
             </button>
         </div>
