html markup styles
for section services

--- a/index.html
+++ b/index.html
@@ -13,15 +13,63 @@
 
     <link rel="stylesheet" href="modern-normalize.css">
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="header.css">
+    <!-- <link rel="stylesheet" href="header.css">
     <link rel="stylesheet" href="main.css">
-    <link rel="stylesheet" href="footer.css">
+    <link rel="stylesheet" href="footer.css"> -->
+    <link rel="stylesheet" href="css/services.css">
 
     <title>Team Project</title>
 </head>
 
 <body>
+    <section class="services">
+        <div class="services__container">
+            <h1 class="services__title">services</h1>
+            <ul class="services__list">
+                <li class="list__item">
+                    <img src="img/s_services/services_1.png" alt="muffins" width="385" height="290" />
+                    <div class="item__text">
+                        <h3 class="item__names">Lorem Ipsum</h3>
+                        <p class="item__paragraphs">Lorem Ipsum is simply dummy text of the printing and typesetting
+                            industry. Lorem Ipsum has been the
+                            industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
+                            of
+                            type
+                            and
+                            scrambled</p>
+                    </div>
+                </li>
+                <li class="list__item">
+                    <img src="img/s_services/services_2.png" alt="muffins" width="385" height="290" />
+                    <div class="item__text">
+                        <h3 class="item__names">Lorem Ipsum</h3>
+                        <p class="item__paragraphs">Lorem Ipsum is simply dummy text of the printing and typesetting
+                            industry. Lorem Ipsum has been the
+                            industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
+                            of
+                            type
+                            and
+                            scrambled</p>
+                    </div>
+                </li>
+                <li class="list__item">
+                    <img src="img/s_services/services_3.png" alt="muffins" width="385" height="290" />
+                    <div class="item__text">
+                        <h3 class="item__names">Lorem Ipsum</h3>
+                        <p class="item__paragraphs">Lorem Ipsum is simply dummy text of the printing and typesetting
+                            industry. Lorem Ipsum has been the
+                            industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
+                            of
+                            type
+                            and
+                            scrambled</p>
+                    </div>
+                </li>
+            </ul>
 
+            <button class="services__button" type="button">contact us</button>
+        </div>
+    </section>
 </body>
 
 </html>
