--- a/index.html
+++ b/index.html
@@ -13,16 +13,15 @@
 
     <link rel="stylesheet" href="modern-normalize.css">
     <link rel="stylesheet" href="styles.css">
-    <!-- <link rel="stylesheet" href="header.css"> -->
+    <!-- <link rel="stylesheet" href="header.css">
     <link rel="stylesheet" href="main.css">
-    <link rel="stylesheet" href="./css/testymonials.css">
-    <link rel="stylesheet" href="./css/services.css">
+    <link rel="stylesheet" href="footer.css"> -->
+    <link rel="stylesheet" href="css/services.css">
 
     <title>Team Project</title>
 </head>
 
 <body>
-
     <section class="services">
         <div class="services__container">
             <h1 class="services__title">services</h1>
@@ -71,173 +70,6 @@
             <button class="services__button" type="button">contact us</button>
         </div>
     </section>
-  
-    <section class="testymonials">
-        <div class="container testymonials__container">
-            <h1 class="testymonials__title">testymonials</h1>
-            <ul class="list testymonials__list">
-                <li class="list__item">
-                    <div class="item__text">
-                        <h3 class="item__title">Anton Karpyuk</h3>
-                        <p class="item__description">Anton Karpyuk is a Ukrainian politician who has served as the
-                            Minister
-                            of Defense since 2023. He is a member of the Servant of the People party and is considered
-                            to be
-                            a close ally of President Volodymyr Zelenskyy. Karpyuk was born in Kyiv, Ukraine, in 1978.
-                            He
-                            studied law at the Taras Shevchenko National University of Kyiv and began his career as a
-                            lawyer
-                            in 2001. He served as a member of the Ukrainian Parliament from 2014 to 2023.</p>
-                    </div>
-                    <ul class="list list__score">
-                        <li class="score__star">
-                            <svg width="18" height="18" viewBox="0 0 18 18">
-                                <use href="img/svg/icons.svg#icon-star"></use>
-                            </svg>
-                        </li>
-                        <li class="score__star">
-                            <svg width="18" height="18" viewBox="0 0 18 18">
-                                <use href="img/svg/icons.svg#icon-star"></use>
-                            </svg>
-                        </li>
-                        <li class="score__star">
-                            <svg width="18" height="18" viewBox="0 0 18 18">
-                                <use href="img/svg/icons.svg#icon-star"></use>
-                            </svg>
-                        </li>
-                        <li class="score__star">
-                            <svg width="18" height="18" viewBox="0 0 18 18">
-                                <use href="img/svg/icons.svg#icon-star"></use>
-                            </svg>
-                        </li>
-                        <li class="score__star">
-                            <svg width="18" height="18" viewBox="0 0 18 18">
-                                <use href="img/svg/icons.svg#icon-star"></use>
-                            </svg>
-                        </li>
-                    </ul>
-                </li>
-                <li class="list__item">
-                    <div class="item__text">
-                        <h3 class="item__title">Bohdan Vyrymchuk</h3>
-                        <p class="item__description">Bohdan Vyrymchuk is a Ukrainian soldier who is fighting in the war
-                            against Russia. He is a member of the Ukrainian Armed Forces and is currently stationed in
-                            the
-                            Donbas region. Vyrymchuk was born in Kyiv, Ukraine, in 1993. He studied engineering at the
-                            Taras
-                            Shevchenko National University of Kyiv and began his military service in 2017. He has been
-                            fighting in the war against Russia since 2022.</p>
-                    </div>
-                    <ul class="list list__score">
-                        <li class="score__star">
-                            <svg width="18" height="18" viewBox="0 0 18 18">
-                                <use href="img/svg/icons.svg#icon-star"></use>
-                            </svg>
-                        </li>
-                        <li class="score__star">
-                            <svg width="18" height="18" viewBox="0 0 18 18">
-                                <use href="img/svg/icons.svg#icon-star"></use>
-                            </svg>
-                        </li>
-                        <li class="score__star">
-                            <svg width="18" height="18" viewBox="0 0 18 18">
-                                <use href="img/svg/icons.svg#icon-star"></use>
-                            </svg>
-                        </li>
-                        <li class="score__star">
-                            <svg width="18" height="18" viewBox="0 0 18 18">
-                                <use href="img/svg/icons.svg#icon-star"></use>
-                            </svg>
-                        </li>
-                        <li class="score__star">
-                            <svg width="18" height="18" viewBox="0 0 18 18">
-                                <use href="img/svg/icons.svg#icon-star"></use>
-                            </svg>
-                        </li>
-                    </ul>
-                </li>
-                <li class="list__item">
-                    <div class="item__text">
-                        <h3 class="item__title">Nazar Nyshchyi</h3>
-                        <p class="item__description">Nazar Nyshchyi is a Ukrainian volunteer who is helping to evacuate
-                            civilians from the war-torn city of Mariupol. He is a member of the Ukrainian Red Cross and
-                            has
-                            been working tirelessly to help those in need. Nyshchyi was born in Mariupol in 1980. He
-                            studied
-                            engineering at the National Technical University of Ukraine "Igor Sikorsky Kyiv Polytechnic
-                            Institute" and began his career as an engineer in 2002. He joined the Ukrainian Red Cross in
-                            2020.</p>
-                    </div>
-                    <ul class="list list__score">
-                        <li class="score__star">
-                            <svg width="18" height="18" viewBox="0 0 18 18">
-                                <use href="img/svg/icons.svg#icon-star"></use>
-                            </svg>
-                        </li>
-                        <li class="score__star">
-                            <svg width="18" height="18" viewBox="0 0 18 18">
-                                <use href="img/svg/icons.svg#icon-star"></use>
-                            </svg>
-                        </li>
-                        <li class="score__star">
-                            <svg width="18" height="18" viewBox="0 0 18 18">
-                                <use href="img/svg/icons.svg#icon-star"></use>
-                            </svg>
-                        </li>
-                        <li class="score__star">
-                            <svg width="18" height="18" viewBox="0 0 18 18">
-                                <use href="img/svg/icons.svg#icon-star"></use>
-                            </svg>
-                        </li>
-                        <li class="score__star">
-                            <svg width="18" height="18" viewBox="0 0 18 18">
-                                <use href="img/svg/icons.svg#icon-star"></use>
-                            </svg>
-                        </li>
-                    </ul>
-                </li>
-                <li class="list__item">
-                    <div class="item__text">
-                        <h3 class="item__title">Lex Hmilovskij</h3>
-                        <p class="item__description">
-                            Lex Hmilovskij is a young Ukrainian man who is passionate about his country and its future.
-                            He
-                            is a talented writer and journalist, and he is using his skills to raise awareness about the
-                            war
-                            in Ukraine. He is also a strong advocate for human rights and democracy. He is a role model
-                            for
-                            young people in Ukraine, and he is an inspiration to people all over the world.</p>
-                    </div>
-                    <ul class="list list__score">
-                        <li class="score__star">
-                            <svg width="18" height="18" viewBox="0 0 18 18">
-                                <use href="img/svg/icons.svg#icon-star"></use>
-                            </svg>
-                        </li>
-                        <li class="score__star">
-                            <svg width="18" height="18" viewBox="0 0 18 18">
-                                <use href="img/svg/icons.svg#icon-star"></use>
-                            </svg>
-                        </li>
-                        <li class="score__star">
-                            <svg width="18" height="18" viewBox="0 0 18 18">
-                                <use href="img/svg/icons.svg#icon-star"></use>
-                            </svg>
-                        </li>
-                        <li class="score__star">
-                            <svg width="18" height="18" viewBox="0 0 18 18">
-                                <use href="img/svg/icons.svg#icon-star"></use>
-                            </svg>
-                        </li>
-                        <li class="score__star">
-                            <svg width="18" height="18" viewBox="0 0 18 18">
-                                <use href="img/svg/icons.svg#icon-star"></use>
-                            </svg>
-                        </li>
-                    </ul>
-                </li>
-            </ul>
-            <button class="testymonials__button" type="button">contact us</button>
 </body>
 
 </html>
