--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@
 
     <link rel="stylesheet" href="modern-normalize.css">
     <link rel="stylesheet" href="styles.css">
-    <!-- <link rel="stylesheet" href="header.css"> -->
     <link rel="stylesheet" href="main.css">
-    <link rel="stylesheet" href="./css/testymonials.css">
     <link rel="stylesheet" href="./css/services.css">
+    <link rel="stylesheet" href="./css/testymonials.css">
 
     <title>Team Project</title>
 </head>
@@ -24,14 +23,15 @@
 <body>
 
     <section class="services">
-        <div class="services__container">
+        <div class="container--services container">
             <h1 class="services__title">services</h1>
             <ul class="services__list">
-                <li class="list__item">
+                <li class="list__item--services">
                     <img src="img/s_services/services_1.png" alt="muffins" width="385" height="290" />
-                    <div class="item__text">
-                        <h3 class="item__names">Lorem Ipsum</h3>
-                        <p class="item__paragraphs">Lorem Ipsum is simply dummy text of the printing and typesetting
+                    <div class="item__text--services">
+                        <h3 class="item__names--services">Lorem Ipsum</h3>
+                        <p class="item__paragraphs--services">Lorem Ipsum is simply dummy text of the printing and
+                            typesetting
                             industry. Lorem Ipsum has been the
                             industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
                             of
@@ -40,11 +40,12 @@
                             scrambled</p>
                     </div>
                 </li>
-                <li class="list__item">
+                <li class="list__item--services">
                     <img src="img/s_services/services_2.png" alt="muffins" width="385" height="290" />
-                    <div class="item__text">
-                        <h3 class="item__names">Lorem Ipsum</h3>
-                        <p class="item__paragraphs">Lorem Ipsum is simply dummy text of the printing and typesetting
+                    <div class="item__text--services">
+                        <h3 class="item__names--services">Lorem Ipsum</h3>
+                        <p class="item__paragraphs--services">Lorem Ipsum is simply dummy text of the printing and
+                            typesetting
                             industry. Lorem Ipsum has been the
                             industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
                             of
@@ -53,11 +54,12 @@
                             scrambled</p>
                     </div>
                 </li>
-                <li class="list__item">
+                <li class="list__item--services">
                     <img src="img/s_services/services_3.png" alt="muffins" width="385" height="290" />
-                    <div class="item__text">
-                        <h3 class="item__names">Lorem Ipsum</h3>
-                        <p class="item__paragraphs">Lorem Ipsum is simply dummy text of the printing and typesetting
+                    <div class="item__text--services">
+                        <h3 class="item__names--services">Lorem Ipsum</h3>
+                        <p class="item__paragraphs--services">Lorem Ipsum is simply dummy text of the printing and
+                            typesetting
                             industry. Lorem Ipsum has been the
                             industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
                             of
@@ -68,18 +70,19 @@
                 </li>
             </ul>
 
-            <button class="services__button" type="button">contact us</button>
+            <button type="button">contact us</button>
         </div>
     </section>
-  
+
     <section class="testymonials">
-        <div class="container testymonials__container">
+        <div class="container--testymonials container">
             <h1 class="testymonials__title">testymonials</h1>
-            <ul class="list testymonials__list">
-                <li class="list__item">
-                    <div class="item__text">
-                        <h3 class="item__title">Anton Karpyuk</h3>
-                        <p class="item__description">Anton Karpyuk is a Ukrainian politician who has served as the
+            <ul class="testymonials__list">
+                <li class="list__item--testymonials">
+                    <div class="item__text--testymonials">
+                        <h3 class="item__title--testymonials">Anton Karpyuk</h3>
+                        <p class="item__description--testymonials">Anton Karpyuk is a Ukrainian politician who has
+                            served as the
                             Minister
                             of Defense since 2023. He is a member of the Servant of the People party and is considered
                             to be
@@ -89,38 +92,39 @@
                             lawyer
                             in 2001. He served as a member of the Ukrainian Parliament from 2014 to 2023.</p>
                     </div>
-                    <ul class="list list__score">
-                        <li class="score__star">
+                    <ul class="list__score--testymonials">
+                        <li class="score__star--testymonials">
                             <svg width="18" height="18" viewBox="0 0 18 18">
                                 <use href="img/svg/icons.svg#icon-star"></use>
                             </svg>
                         </li>
-                        <li class="score__star">
+                        <li class="score__star--testymonials">
                             <svg width="18" height="18" viewBox="0 0 18 18">
                                 <use href="img/svg/icons.svg#icon-star"></use>
                             </svg>
                         </li>
-                        <li class="score__star">
+                        <li class="score__star--testymonials">
                             <svg width="18" height="18" viewBox="0 0 18 18">
                                 <use href="img/svg/icons.svg#icon-star"></use>
                             </svg>
                         </li>
-                        <li class="score__star">
+                        <li class="score__star--testymonials">
                             <svg width="18" height="18" viewBox="0 0 18 18">
                                 <use href="img/svg/icons.svg#icon-star"></use>
                             </svg>
                         </li>
-                        <li class="score__star">
+                        <li class="score__star--testymonials">
                             <svg width="18" height="18" viewBox="0 0 18 18">
                                 <use href="img/svg/icons.svg#icon-star"></use>
                             </svg>
                         </li>
                     </ul>
                 </li>
-                <li class="list__item">
-                    <div class="item__text">
-                        <h3 class="item__title">Bohdan Vyrymchuk</h3>
-                        <p class="item__description">Bohdan Vyrymchuk is a Ukrainian soldier who is fighting in the war
+                <li class="list__item--testymonials">
+                    <div class="item__text--testymonials">
+                        <h3 class="item__title--testymonials">Bohdan Vyrymchuk</h3>
+                        <p class="item__description--testymonials">Bohdan Vyrymchuk is a Ukrainian soldier who is
+                            fighting in the war
                             against Russia. He is a member of the Ukrainian Armed Forces and is currently stationed in
                             the
                             Donbas region. Vyrymchuk was born in Kyiv, Ukraine, in 1993. He studied engineering at the
@@ -128,38 +132,39 @@
                             Shevchenko National University of Kyiv and began his military service in 2017. He has been
                             fighting in the war against Russia since 2022.</p>
                     </div>
-                    <ul class="list list__score">
-                        <li class="score__star">
+                    <ul class="list__score--testymonials">
+                        <li class="score__star--testymonials">
                             <svg width="18" height="18" viewBox="0 0 18 18">
                                 <use href="img/svg/icons.svg#icon-star"></use>
                             </svg>
                         </li>
-                        <li class="score__star">
+                        <li class="score__star--testymonials">
                             <svg width="18" height="18" viewBox="0 0 18 18">
                                 <use href="img/svg/icons.svg#icon-star"></use>
                             </svg>
                         </li>
-                        <li class="score__star">
+                        <li class="score__star--testymonials">
                             <svg width="18" height="18" viewBox="0 0 18 18">
                                 <use href="img/svg/icons.svg#icon-star"></use>
                             </svg>
                         </li>
-                        <li class="score__star">
+                        <li class="score__star--testymonials">
                             <svg width="18" height="18" viewBox="0 0 18 18">
                                 <use href="img/svg/icons.svg#icon-star"></use>
                             </svg>
                         </li>
-                        <li class="score__star">
+                        <li class="score__star--testymonials">
                             <svg width="18" height="18" viewBox="0 0 18 18">
                                 <use href="img/svg/icons.svg#icon-star"></use>
                             </svg>
                         </li>
                     </ul>
                 </li>
-                <li class="list__item">
-                    <div class="item__text">
-                        <h3 class="item__title">Nazar Nyshchyi</h3>
-                        <p class="item__description">Nazar Nyshchyi is a Ukrainian volunteer who is helping to evacuate
+                <li class="list__item--testymonials">
+                    <div class="item__text--testymonials">
+                        <h3 class="item__title--testymonials">Nazar Nyshchyi</h3>
+                        <p class="item__description--testymonials">Nazar Nyshchyi is a Ukrainian volunteer who is
+                            helping to evacuate
                             civilians from the war-torn city of Mariupol. He is a member of the Ukrainian Red Cross and
                             has
                             been working tirelessly to help those in need. Nyshchyi was born in Mariupol in 1980. He
@@ -168,38 +173,38 @@
                             Institute" and began his career as an engineer in 2002. He joined the Ukrainian Red Cross in
                             2020.</p>
                     </div>
-                    <ul class="list list__score">
-                        <li class="score__star">
+                    <ul class="list__score--testymonials">
+                        <li class="score__star--testymonials">
                             <svg width="18" height="18" viewBox="0 0 18 18">
                                 <use href="img/svg/icons.svg#icon-star"></use>
                             </svg>
                         </li>
-                        <li class="score__star">
+                        <li class="score__star--testymonials">
                             <svg width="18" height="18" viewBox="0 0 18 18">
                                 <use href="img/svg/icons.svg#icon-star"></use>
                             </svg>
                         </li>
-                        <li class="score__star">
+                        <li class="score__star--testymonials">
                             <svg width="18" height="18" viewBox="0 0 18 18">
                                 <use href="img/svg/icons.svg#icon-star"></use>
                             </svg>
                         </li>
-                        <li class="score__star">
+                        <li class="score__star--testymonials">
                             <svg width="18" height="18" viewBox="0 0 18 18">
                                 <use href="img/svg/icons.svg#icon-star"></use>
                             </svg>
                         </li>
-                        <li class="score__star">
+                        <li class="score__star--testymonials">
                             <svg width="18" height="18" viewBox="0 0 18 18">
                                 <use href="img/svg/icons.svg#icon-star"></use>
                             </svg>
                         </li>
                     </ul>
                 </li>
-                <li class="list__item">
-                    <div class="item__text">
-                        <h3 class="item__title">Lex Hmilovskij</h3>
-                        <p class="item__description">
+                <li class="list__item--testymonials">
+                    <div class="item__text--testymonials">
+                        <h3 class="item__title--testymonials">Lex Hmilovskij</h3>
+                        <p class="item__description--testymonials">
                             Lex Hmilovskij is a young Ukrainian man who is passionate about his country and its future.
                             He
                             is a talented writer and journalist, and he is using his skills to raise awareness about the
@@ -208,28 +213,28 @@
                             for
                             young people in Ukraine, and he is an inspiration to people all over the world.</p>
                     </div>
-                    <ul class="list list__score">
-                        <li class="score__star">
+                    <ul class="list__score--testymonials">
+                        <li class="score__star--testymonials">
                             <svg width="18" height="18" viewBox="0 0 18 18">
                                 <use href="img/svg/icons.svg#icon-star"></use>
                             </svg>
                         </li>
-                        <li class="score__star">
+                        <li class="score__star--testymonials">
                             <svg width="18" height="18" viewBox="0 0 18 18">
                                 <use href="img/svg/icons.svg#icon-star"></use>
                             </svg>
                         </li>
-                        <li class="score__star">
+                        <li class="score__star--testymonials">
                             <svg width="18" height="18" viewBox="0 0 18 18">
                                 <use href="img/svg/icons.svg#icon-star"></use>
                             </svg>
                         </li>
-                        <li class="score__star">
+                        <li class="score__star--testymonials">
                             <svg width="18" height="18" viewBox="0 0 18 18">
                                 <use href="img/svg/icons.svg#icon-star"></use>
                             </svg>
                         </li>
-                        <li class="score__star">
+                        <li class="score__star--testymonials">
                             <svg width="18" height="18" viewBox="0 0 18 18">
                                 <use href="img/svg/icons.svg#icon-star"></use>
                             </svg>
@@ -237,7 +242,9 @@
                     </ul>
                 </li>
             </ul>
-            <button class="testymonials__button" type="button">contact us</button>
+            <button type="button">contact us</button>
+        </div>
+    </section>
 </body>
 
 </html>
