fix same name classes

--- a/index.html
+++ b/index.html
@@ -12,11 +12,7 @@
         rel="stylesheet">
 
     <link rel="stylesheet" href="modern-normalize.css">
-    <!-- <link rel="stylesheet" href="css/header.css"> -->
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="styles.css">
-
     <link rel="stylesheet" href="css/how-we-work.css">
 
     <title>Team Project</title>
@@ -24,11 +20,12 @@
 
 <body>
     <section class="how-we-work">
-        <div class="how-we-work__container">
+        <div class="how-we-work__container container">
             <div class="how-we-work__background"></div>
             <div class="how-we-work__text">
                 <div class="how-we-work__description">
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the</p>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+                        the industry's standard dummy text ever since the</p>
                 </div>
 
                 <div class="how-we-work__title">
@@ -37,23 +34,21 @@
             </div>
 
             <ul class="how-we-work__list">
-                <li class="list__item">
+                <li class="list__item--how-we-work">
                     <img src="img/s_how-we-work/work_1.png" alt="work1">
                 </li>
-                <li class="list__item">
+                <li class="list__item--how-we-work">
                     <img src="img/s_how-we-work/work_2.png" alt="work2">
                 </li>
-                <li class="list__item">
+                <li class="list__item--how-we-work">
                     <img src="img/s_how-we-work/work_3.png" alt="work3">
                 </li>
-                <li class="list__item">
+                <li class="list__item--how-we-work">
                     <img src="img/s_how-we-work/work_4.png" alt="work4">
                 </li>
             </ul>
 
-            <button class="how-we-work__button" type="button">
-                <p>Contact us</p>
-            </button>
+            <button class="how-we-work__button" type="button">Contact us</button>
         </div>
     </section>
 </body>
