--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="./css/services.css">
     <link rel="stylesheet" href="./css/testymonials.css">
+    <link rel="stylesheet" href="./css/contact-us.css">
 
     <title>Team Project</title>
 </head>
@@ -242,6 +243,43 @@
                 </li>
             </ul>
             <button type="button">contact us</button>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <section class="contact-us">
+        <div class="container--contact-us container">
+            <h1 class="contact-us__title">contact us</h1>
+            <div class="contact-us__feedback-form">
+                <div class="feedback-form__list">
+                    <input class="list-item__name--contact-us" type="text" placeholder="name">
+                    <input class="list-item__email--contact-us" type="email" placeholder="email">
+                    <input class="list-item__message--contact-us" type="text" placeholder="message">
+                </div>
+
+                <address class="feedback-form__address">
+                    <div class="address__icon-container">
+                        <a class="address__email" href="mailto:nazarcossack2004@gmail.com">
+                            <svg width="24" height="24" viewBox="0 0 24 24">
+                                <use href="img/svg/icons.svg#icon-mail"></use>
+                                </svg>nazarcossack2004@gmail.com</a>
+                    </div>
+                    <div class="address__icon-container">   
+                        <a class="address__number" href="tel.:+3035550105">
+                            <svg width="24" height="24" viewBox="0 0 24 24">
+                                <use href="img/svg/icons.svg#icon-phone"></use>
+                                </svg>(303) 555-0105</a>
+                    </div>
+                    <div class="address__icon-container">
+                        <p class="address__location">
+                            <svg width="24" height="24" viewBox="0 0 24 24">
+                                <use href="img/svg/icons.svg#icon-location"></use>
+                                </svg>2715 Ash Dr. San Jose, South Dakota 83475</p>
+                    </div>                       
+                </address>  
+            </div>
+
+            <button class="address__contact-button" type="button">contact us</button>
         </div>
     </section>
 </body>
