--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
     </section>
 
     <!-- Footer -->
-    <section class="contact-us">
+    <footer class="contact-us">
         <div class="container--contact-us container">
             <h1 class="contact-us__title">contact us</h1>
             <div class="contact-us__feedback-form">
@@ -281,7 +281,7 @@
 
             <button class="address__contact-button" type="button">contact us</button>
         </div>
-    </section>
+    </footer>
 </body>
 
 </html>
