--- a/index.html
+++ b/index.html
@@ -255,6 +255,7 @@
                     <input class="list-item__name--contact-us" type="text" placeholder="name">
                     <input class="list-item__email--contact-us" type="email" placeholder="email">
                     <input class="list-item__message--contact-us" type="text" placeholder="message">
+                    <button class="address__contact-button" type="button">contact us</button>
                 </div>
 
                 <address class="feedback-form__address">
@@ -262,24 +263,23 @@
                         <a class="address__email" href="mailto:nazarcossack2004@gmail.com">
                             <svg width="24" height="24" viewBox="0 0 24 24">
                                 <use href="img/svg/icons.svg#icon-mail"></use>
-                                </svg>nazarcossack2004@gmail.com</a>
+                            </svg>nazarcossack2004@gmail.com</a>
                     </div>
-                    <div class="address__icon-container">   
+                    <div class="address__icon-container">
                         <a class="address__number" href="tel.:+3035550105">
                             <svg width="24" height="24" viewBox="0 0 24 24">
                                 <use href="img/svg/icons.svg#icon-phone"></use>
-                                </svg>(303) 555-0105</a>
+                            </svg>(303) 555-0105</a>
                     </div>
                     <div class="address__icon-container">
                         <p class="address__location">
                             <svg width="24" height="24" viewBox="0 0 24 24">
                                 <use href="img/svg/icons.svg#icon-location"></use>
-                                </svg>2715 Ash Dr. San Jose, South Dakota 83475</p>
-                    </div>                       
-                </address>  
+                            </svg>2715 Ash Dr. San Jose, South Dakota 83475
+                        </p>
+                    </div>
+                </address>
             </div>
-
-            <button class="address__contact-button" type="button">contact us</button>
         </div>
     </footer>
 </body>
