--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="modern-normalize.css">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="./css/about-us.css">
     <link rel="stylesheet" href="./css/services.css">
     <link rel="stylesheet" href="./css/testymonials.css">
 
@@ -21,6 +22,20 @@
 </head>
 
 <body>
+    <section class="about-us">
+        <div class="background"></div>
+        <div class="container about-us__container">
+            <div class="about-us__info">
+                <h3 class="about-us__header">About us</h3>
+                <p class="about-us__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                <button type="button" class="about-us__button">Contact us</button>
+            </div>
+            <div class="about-us__photo">
+                <div class="background-white"></div>
+                <img src="./img/s_about-us/aboutus.png" alt="Пекарь"></div>
+        </div>
+    </section>
+
     <section class="services">
         <div class="container--services container">
             <h1 class="services__title">services</h1>
