--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="modern-normalize.css">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="./css/header.css">
     <link rel="stylesheet" href="./css/services.css">
     <link rel="stylesheet" href="./css/testymonials.css">
 
@@ -21,6 +22,71 @@
 </head>
 
 <body>
+    <header class="header">
+        <div class="header__background">
+            <div class="background__height"></div>
+        </div>
+        <div class="container--header container">
+            <div class="header__gradient"></div>
+            <div class="header__logo logo">
+                <img src="./img/logo.png" alt="Peachy Pup Bakery" width="53px" height="52px">
+                <h3 class="logo__text">peachy pup bakery</h3>
+            </div>
+            <div class="header__text">
+                <div class="text__container--header">
+                    <h1 class="text__title--header">tasty pastries</h1>
+                    <p class="text__description--header">Lorem Ipsum is simply dummy text of the printing and
+                        typesetting
+                        industry. Lorem Ipsum has been the industry's standard dummy text ever since the</p>
+                </div>
+
+                <button class="text__button--header" type="button">see more</button>
+                <div class="text__socials--header">
+                    <ul class="socials__list--header">
+                        <li class="list__item--header">
+                            <a href="#" class="item__link--header">
+                                <svg width="24" height="24" viewBox="0 0 24 24">
+                                    <use href="img/svg/icons.svg#icon-facebook"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="list__item--header">
+                            <a href="#" class="item__link--header">
+                                <svg width="24" height="24" viewBox="0 0 24 24">
+                                    <use href="img/svg/icons.svg#icon-instagram"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="list__item--header">
+                            <a href="#" class="item__link--header">
+                                <svg width="24" height="24" viewBox="0 0 24 24">
+                                    <use href="img/svg/icons.svg#icon-twitter"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="list__item--header">
+                            <a href="#" class="item__link--header">
+                                <svg width="20" height="20" viewBox="0 0 24 24">
+                                    <use x="4px" href="img/svg/icons.svg#icon-x"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+                    <div class="text__telephone--header">
+                        <p class="number__text--header">Telephone:</p>
+                        <p class="number__digits--header">+380 97 842 60 01</p>
+                    </div>
+                </div>
+            </div>
+            <div class="header__images">
+                <div class="images__mask">
+                    <img src="img/s_header/mask.png" alt="">
+                </div>
+                <img class="images__buns" src="img/s_header/buns.png" alt="Buns">
+                <img class="images__sticker" src="img/s_header/sticker.png" alt="Quality Sticker">
+            </div>
+        </div>
+    </header>
     <section class="services">
         <div class="container--services container">
             <h1 class="services__title">services</h1>
