fix images and container styles

--- a/index.html
+++ b/index.html
@@ -35,16 +35,16 @@
 
             <ul class="how-we-work__list">
                 <li class="list__item--how-we-work">
-                    <img src="img/s_how-we-work/work_1.png" alt="work1">
+                    <img src="img/s_how-we-work/work_1.png" width="270" height="304" alt="work1">
                 </li>
                 <li class="list__item--how-we-work">
-                    <img src="img/s_how-we-work/work_2.png" alt="work2">
+                    <img src="img/s_how-we-work/work_2.png" width="270" height="304" alt="work2">
                 </li>
                 <li class="list__item--how-we-work">
-                    <img src="img/s_how-we-work/work_3.png" alt="work3">
+                    <img src="img/s_how-we-work/work_3.png" width="270" height="304" alt="work3">
                 </li>
                 <li class="list__item--how-we-work">
-                    <img src="img/s_how-we-work/work_4.png" alt="work4">
+                    <img src="img/s_how-we-work/work_4.png" width="270" height="304" alt="work4">
                 </li>
             </ul>
 
