--- a/index.html
+++ b/index.html
@@ -23,10 +23,8 @@
 
 <body>
     <header class="header">
-        <div class="header__background">
-            <div class="background__height"></div>
-        </div>
         <div class="container--header container">
+            <div class="header__background"></div>
             <div class="header__gradient"></div>
             <div class="header__logo logo">
                 <img src="./img/logo.png" alt="Peachy Pup Bakery" width="53px" height="52px">
@@ -66,16 +64,13 @@
                         </li>
                         <li class="list__item--header">
                             <a href="#" class="item__link--header">
-                                <svg width="20" height="20" viewBox="0 0 24 24">
+                                <svg width="20" height="24" viewBox="0 0 24 24">
                                     <use x="4px" href="img/svg/icons.svg#icon-x"></use>
                                 </svg>
                             </a>
                         </li>
                     </ul>
-                    <div class="text__telephone--header">
-                        <p class="number__text--header">Telephone:</p>
-                        <p class="number__digits--header">+380 97 842 60 01</p>
-                    </div>
+                    <p class="text__telephone--header">Telephone:<span>+7 700 000 00 00</span></p>
                 </div>
             </div>
             <div class="header__images">
