fix background slider bug, css styles clean up

--- a/index.html
+++ b/index.html
@@ -23,16 +23,22 @@
 
 <body>
     <section class="about-us">
-        <div class="background"></div>
-        <div class="container about-us__container">
+        <div class="about-us__container container ">
+            <div class="about-us__background"></div>
             <div class="about-us__info">
                 <h3 class="about-us__header">About us</h3>
-                <p class="about-us__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                <p class="about-us__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
+                    printer took a galley of type and scrambled it to make a type specimen book. It has survived not
+                    only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
+                    It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
+                    and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem
+                    Ipsum.</p>
                 <button type="button" class="about-us__button">Contact us</button>
             </div>
             <div class="about-us__photo">
-                <div class="background-white"></div>
-                <img src="./img/s_about-us/aboutus.png" alt="Пекарь"></div>
+                <img src="./img/s_about-us/aboutus.png" width="642" height="740" alt="Пекарь">
+            </div>
         </div>
     </section>
 
